--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -337,7 +337,7 @@
                     <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ
                         MERECE!</h5>
                     <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">
-                        <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank"> CENTRAL DE ATENDIMENTO
+                        <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank" style="color: white;"> CENTRAL DE ATENDIMENTO
                         </a></button>
                 </div>
             </div>
