--- a/PerfilUsuario/PerfilUsuario.html
+++ b/PerfilUsuario/PerfilUsuario.html
@@ -7,9 +7,9 @@
   <title>Login</title>
   <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
   <link rel="stylesheet" href="PerfilUsuario.css">
-  <script src="PerfilUsuario.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="PerfilUsuario.js"></script>
 </head>
 
 <body>
@@ -19,12 +19,12 @@
   </header>
 
   <div class="containerCard">
-    <h2>USUÁRIO</h2>
+    <h2 id="nome-usuario">USUÁRIO</h2>
 
     <div class="col-sm-12">
       <label for="valor" class="col-form-label">E-MAIL</label>
       <div class="d-flex">
-        <input type="text" class="form-control" id="valor" name="valor" disabled>
+        <input type="text" class="form-control" id="email-usuario" name="valor" disabled>
         <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
           disabled>
       </div>
@@ -33,7 +33,7 @@
     <div class="col-sm-12">
       <label for="valor" class="col-form-label">CPF</label>
       <div class="d-flex">
-        <input type="text" class="form-control" id="valor" name="valor" disabled>
+        <input type="text" class="form-control" id="cpf-usuario" name="valor" disabled>
         <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
           disabled>
       </div>
@@ -42,21 +42,11 @@
     <div class="col-sm-12">
       <label for="valor" class="col-form-label">TELEFONE</label>
       <div class="d-flex">
-        <input type="text" class="form-control" id="valor" name="valor" disabled>
+        <input type="text" class="form-control" id="telefone-usuario" name="valor" disabled>
         <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
           disabled>
       </div>
     </div>
-
-    <div class="col-sm-12">
-      <label for="valor" class="col-form-label">DATA DE NASCIMENTO</label>
-      <div class="d-flex">
-        <input type="text" class="form-control" id="valor" name="valor" disabled>
-        <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao" style="display: none;"
-          disabled>
-      </div>
-    </div>
-  </div>
 
   <footer id='rodape'>
     <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!
